* [Bug 828] refid string not being parsed correctly.
* [Bug 846] Correct includefile parsing.
* [Bug 827] New parsing code does not handle "fudge" correctly.
* Enable debugging capability in the config parser.
* [Bug 839] Crypto password not read from ntp.conf.
* Have autogen produce writable output files.
* [Bug 825] Correct logconfig -/+ keyword processing.
* [Bug 828] Correct parsing of " delimited strings.
* Cleanup FILE * usage after fclose() in ntp_filegen.c.
* [Bug 843] Windows Completion port code was incorrectly merged from -stable.
* [Bug 841] make deferred binding to local interface the default.
	    (allows peers/servers to be configured even when no route exists)
* [Bug 840] do fudge configuration AFTER peers (thus refclocks) have been
	    configured.
* [Bug 824] Added new parser modules to the Windows project file.
* [Bug 832] Add libisc/log.c headers to the distribution.
* [Bug 808] Only write the drift file if we are in state 4.
* Initial import of libisc/log.c and friends.
* [Bug 826] Fix redefinition of PI.
* [Bug 825] ntp_scanner.c needs to #include <config.h> .
* [Bug 824] New parser code has some build problems with the SIM code.
* [Bug 817] Use longnames for setting ntp variables on the command-line;
	    Allowing '-v' with and without an arg to disambiguate usage
	    is error-prone.
* [Bug 822] set progname once, early.
* [Bug 819] remove erroneous #if 0 in Windows completion port code.
* The new config code missed an #ifdef for building without refclocks.
* Distribute some files needed by the new config parsing code.
* [Bug 819] Timeout for WaitForMultipleObjects was 500ms instead of INFINITE
* Use autogen 5.9.1.
* Fix clktest command-line arg processing.'
* Audio documentation updates from Dave Mills.
* New config file parsing code, from Sachin Kamboj.
* fuzz bit cleanup from Dave Mills.
* replay cleanup from Dave Mills.
* [Bug 542] Tolerate missing directory separator at EO statsdir.
* [Bug 812] ntpd should drop supplementary groups.